--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "actions-demo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon index.js",
+    "build": "babel . -d dist --ignore node_modules,test.js",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "devDependencies": {
-    "jest": "^30.0.5"
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "jest": "^30.0.5",
+    "nodemon": "^3.1.0"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
   }
 }
