--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon index.js",
-    "build": "babel . -d dist --ignore node_modules,test.js",
+    "build": "babel . -d dist --ignore node_modules,test.js,dist",
     "test": "jest"
   },
   "dependencies": {
@@ -22,3 +22,4 @@
     "presets": ["@babel/preset-env"]
   }
 }
+
